- fix: https://github.com/padreati/rapaio-jupyter-kernel/issues/26 - bump version to 1.0.1